<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConnectLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/def_bg"
    tools:context=".fragments.ConnectionsFragment">

    <LinearLayout
        android:id="@+id/connections_panels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/r_connect_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/bg_view"
            android:elevation="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title_R"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/s_image_r"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/speaker"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/r_speaker_panel_title"
                    style="@style/title_text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/R" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/connected_device_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/connected_speaker_r"
                    style="@style/body_text"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.6"
                    android:background="@color/black"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:padding="1dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/not_connected"
                    android:textColor="@color/vermilion_red"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/connect_btn_r"
                    style="@style/default_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.4"
                    android:text="@string/connect_speaker"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/volume_control_r"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/volume_title_r"
                    style="@style/title_text_2"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/volume" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/volume_r"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.5"
                    android:valueFrom="0.0"
                    android:valueTo="100.0"
                    app:thumbColor="@color/def_darker_orange"
                    app:trackColor="@color/def_orange"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/volume_value_r"
                    style="@style/body_text"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/volume_sample_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/delay_panel_r"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/delay_title_r"
                    style="@style/title_text_2"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/delay"
                    android:textAlignment="center" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/minus_delay_r"
                    style="@style/default_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/delay_counter_r"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.4"
                    android:background="@color/black"
                    android:gravity="center"
                    android:text="@string/sample_delay_value"
                    android:textColor="@color/def_darker_orange"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/plus_delay_r"
                    style="@style/default_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.1"
                    android:text="@string/plus"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_connect_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/bg_view"
            android:elevation="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title_L"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/s_image_l"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/speaker" />

                <TextView
                    android:id="@+id/l_speaker_panel_title"
                    style="@style/title_text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/L" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/connected_device_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/connected_speaker_l"
                    style="@style/body_text"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.6"
                    android:background="@color/black"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:padding="1dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/not_connected"
                    android:textColor="@color/vermilion_red"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/connect_btn_l"
                    style="@style/default_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.4"
                    android:text="@string/connect_speaker"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/volume_control_l"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/volume_title_l"
                    style="@style/title_text_2"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/volume" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/volume_l"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.5"
                    android:valueFrom="0.0"
                    android:valueTo="100.0"
                    app:thumbColor="@color/def_darker_orange"
                    app:trackColor="@color/def_orange"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/volume_value_l"
                    style="@style/body_text"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/volume_sample_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/delay_panel_l"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/delay_title_l"
                    style="@style/title_text_2"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/delay"
                    android:textAlignment="center" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/minus_delay_l"
                    style="@style/default_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.1"
                    android:text="@string/minus"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/delay_counter_l"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.4"
                    android:background="@color/black"
                    android:gravity="center"
                    android:text="@string/sample_delay_value"
                    android:textColor="@color/def_darker_orange"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/plus_delay_l"
                    style="@style/default_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.1"
                    android:text="@string/plus"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>